On Safari : fixing the width of the fixed header to see the entire "add" button which was cut on the right side ?

--- a/templates/g5_helium/custom/scss/global.scss
+++ b/templates/g5_helium/custom/scss/global.scss
@@ -1657,9 +1657,7 @@ footer#g-footer > .g-container {
 
 .view-list .page-header-container {
   position: fixed;
-  width: -webkit-fill-available;
-  width: -moz-available;
-  width: fill-available;
+  width: calc(100% - 75px);
   background: var(--em-coordinator-bg);
   top: 72px;
   box-shadow: var(--em-box-shadow-x-1) var(--em-box-shadow-y-1) var(--em-box-shadow-blur-1) var(--em-box-shadow-color-1), var(--em-box-shadow-x-2) var(--em-box-shadow-y-2) var(--em-box-shadow-blur-2) var(--em-box-shadow-color-2), var(--em-box-shadow-x-3) var(--em-box-shadow-y-3) var(--em-box-shadow-blur-3) var(--em-box-shadow-color-3);
